fix: su -c em vez de stdin piping + batching de comandos (98 forks -> ~12)